added all required files for clean archectecture and applied the following technologies and standards of code using the best practices combining the following techs to achieve the goal of the challenge
Clean Architecture with Repository Pattern and Applied UseCase.
MVVM with Kotlin
JetPack Compose with material design.
Kotlin Coroutines.
Retrofit and OkHttp with interceptor.
Coil for loading images.
Hilt for Dependency Injection.
Applying Dark and Light themes.